feat(ketsuite): add staff product read routes
